force-app/main/default/objects/dbt__Timesheet_Line_Item__c/fields/dbt__Activity__c.field-meta.xml
<CustomField>
    <fullName>dbt__Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation / Review</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Analysis / Exploration</fullName>
            </value>
            <value>
                <fullName>Development-Admin</fullName>
            </value>
            <value>
                <fullName>Development-Coding</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Social Media Post</fullName>
            </value>
            <value>
                <fullName>Mentoring / Training</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>