force-app/main/default/objects/dbt__Timesheet_Line_Item__c/fields/dbt__Date__c.field-meta.xml
<CustomField>
    <fullName>dbt__Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>