force-app/main/default/objects/dbt__Timesheet_Line_Item__c/fields/dbt__Description__c.field-meta.xml
<CustomField>
    <fullName>dbt__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>