force-app/main/default/objects/dbt__Timesheet_Line_Item__c/fields/dbt__Duration__c.field-meta.xml
<CustomField>
    <fullName>dbt__Duration__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>