force-app/main/default/objects/dbt__Timesheet_Line_Item__c/fields/dbt__Employee__c.field-meta.xml
<CustomField>
    <fullName>dbt__Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>dbt__Employee__c</referenceTo>
    <relationshipName>Time_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>