force-app/main/default/objects/dbt__Timesheet_Line_Item__c/fields/dbt__Hours_Limit_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>dbt__Hours_Limit_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hours Limit Exceeded</label>
    <type>Checkbox</type>
</CustomField>