force-app/main/default/objects/dbt__Timesheet_Line_Item__c/fields/dbt__Project_Employee__c.field-meta.xml
<CustomField>
    <fullName>dbt__Project_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Employee</label>
    <referenceTo>dbt__Project_Employee__c</referenceTo>
    <relationshipLabel>Time Sheet Line Items</relationshipLabel>
    <relationshipName>Time_Sheet_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>