force-app/main/default/objects/dbt__Timesheet_Line_Item__c/fields/dbt__Timesheet__c.field-meta.xml
<CustomField>
    <fullName>dbt__Timesheet__c</fullName>
    <label>Timesheet</label>
    <referenceTo>dbt__Timesheet__c</referenceTo>
    <relationshipLabel>Time Sheet Line Items</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>