force-app/main/default/objects/dbt__Timesheet_Line_Item__c/validationRules/dbt__Absence_Category_for_Absence_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>dbt__Absence_Category_for_Absence_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( dbt__Type__c , &quot;Absence&quot;) ,
          ISPICKVAL( dbt__Absence_Category__c , &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>dbt__Absence_Category__c</errorDisplayField>
    <errorMessage>Absence category cannot be blank when Type is Absence</errorMessage>
</ValidationRule>