force-app/main/default/objects/dbt__Timesheet_Line_Item__c/validationRules/dbt__Absence_Category_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>dbt__Absence_Category_Validation</fullName>
    <active>true</active>
    <description>Absence category is required for Absence</description>
    <errorConditionFormula>AND( ISPICKVAL(dbt__Type__c, &apos;Absence&apos;),  ISPICKVAL( dbt__Absence_Category__c , &apos; &apos;) )</errorConditionFormula>
    <errorMessage>Absence category is required</errorMessage>
</ValidationRule>