force-app/main/default/objects/dbt__Timesheet_Line_Item__c/validationRules/dbt__Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>dbt__Duration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( dbt__Type__c , &quot;Absence&quot;) ,
 dbt__Duration__c  &gt; 8)</errorConditionFormula>
    <errorDisplayField>dbt__Duration__c</errorDisplayField>
    <errorMessage>Duration cannot be greater than 8 for Absence.</errorMessage>
</ValidationRule>