force-app/main/default/objects/dbt__Timesheet_Line_Item__c/validationRules/dbt__Duration_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>dbt__Duration_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>dbt__Hours_Limit_Exceeded__c  = true</errorConditionFormula>
    <errorMessage>Duration entered for the date has exceeded 24 hours</errorMessage>
</ValidationRule>