force-app/main/default/objects/dbt__Timesheet_Line_Item__c/validationRules/dbt__Eight_hour_limit_for_out_of_office.validationRule-meta.xml
<ValidationRule>
    <fullName>dbt__Eight_hour_limit_for_out_of_office</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL( dbt__Absence_Category__c , &quot;Sick Leave&quot;),
ISPICKVAL( dbt__Absence_Category__c , &quot;PTO-Planned&quot;), 
ISPICKVAL(dbt__Absence_Category__c ,&quot;PTO-Un Planned&quot;)),
dbt__Duration__c &gt; 8)</errorConditionFormula>
    <errorMessage>Enter 8 hours or Less for Absence Type</errorMessage>
</ValidationRule>