force-app/main/default/objects/dbt__Timesheet_Line_Item__c/validationRules/dbt__Project_and_Activity_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>dbt__Project_and_Activity_validation</fullName>
    <active>true</active>
    <description>Project and Activity are required for Attendance</description>
    <errorConditionFormula>AND(
ISPICKVAL( dbt__Type__c , &apos;Attendance&apos;),
				 OR(ISBLANK(dbt__Project__c),
								ISPICKVAL(dbt__Activity__c, &quot;&quot;)
							)
)</errorConditionFormula>
    <errorMessage>Both Project and Activity are required for Attendance</errorMessage>
</ValidationRule>