force-app/main/default/objects/dbt__Timesheet_Line_Item__c/validationRules/dbt__Validate_Timesheet_Line_Item_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>dbt__Validate_Timesheet_Line_Item_Date</fullName>
    <active>true</active>
    <errorConditionFormula>OR(dbt__Date__c      &lt;      dbt__Timesheet__r.dbt__Start_Date__c,
dbt__Date__c        &gt;    dbt__Timesheet__r.dbt__End_Date__c )</errorConditionFormula>
    <errorDisplayField>dbt__Date__c</errorDisplayField>
    <errorMessage>Date value should be between Start Date and End Date of the Timesheet.</errorMessage>
</ValidationRule>